@@ -2361,17 +2361,6 @@ extern "C" {
 #define IPMI_OEM_SUPERMICRO_GET_POWER_SUPPLY_STATUS_GOOD    0x01
 #define IPMI_OEM_SUPERMICRO_GET_POWER_SUPPLY_STATUS_BAD     0x00
 
-/*
- * Supermicro X10DRU-i+
- */
-
-#define IPMI_OEM_SUPERMICRO_GET_POWER_SUPPLY_STATUS2_CHANNEL 0x07
-#define IPMI_OEM_SUPERMICRO_GET_POWER_SUPPLY_STATUS2_PS1     0xB0
-#define IPMI_OEM_SUPERMICRO_GET_POWER_SUPPLY_STATUS2_PS2     0xB2
-#define IPMI_OEM_SUPERMICRO_GET_POWER_SUPPLY_STATUS2_MAGIC   0x0C
-#define IPMI_OEM_SUPERMICRO_GET_POWER_SUPPLY_STATUS2_GOOD    0x00
-#define IPMI_OEM_SUPERMICRO_GET_POWER_SUPPLY_STATUS2_BAD     0x01
-
 #define IPMI_OEM_SUPERMICRO_GET_PMBUS_POWER_SUPPLY_STATUS_CHANNEL 0x07
 #define IPMI_OEM_SUPERMICRO_GET_PMBUS_POWER_SUPPLY_STATUS_PS1     0x78
 #define IPMI_OEM_SUPERMICRO_GET_PMBUS_POWER_SUPPLY_STATUS_PS2     0x7A
@@ -2379,6 +2368,18 @@ extern "C" {
 #define IPMI_OEM_SUPERMICRO_GET_PMBUS_POWER_SUPPLY_STATUS_MAGIC   0x78
 #define IPMI_OEM_SUPERMICRO_GET_PMBUS_POWER_SUPPLY_STATUS_GOOD    0x01
 #define IPMI_OEM_SUPERMICRO_GET_PMBUS_POWER_SUPPLY_STATUS_BAD     0x00
+
+/*
+ * Supermicro X10DRU-i+
+ */
+
+#define IPMI_OEM_SUPERMICRO_GET_POWER_SUPPLY_STATUS2_CHANNEL 0x07
+#define IPMI_OEM_SUPERMICRO_GET_POWER_SUPPLY_STATUS2_PS1     0xB0
+#define IPMI_OEM_SUPERMICRO_GET_POWER_SUPPLY_STATUS2_PS2     0xB2
+#define IPMI_OEM_SUPERMICRO_GET_POWER_SUPPLY_STATUS2_MAGIC   0x79
+/* achu: Both of these mean good ... yeah, makes no sense :P */
+#define IPMI_OEM_SUPERMICRO_GET_POWER_SUPPLY_STATUS2_GOOD1   0x00
+#define IPMI_OEM_SUPERMICRO_GET_POWER_SUPPLY_STATUS2_GOOD2   0x02
 
 /******************************************* 
  * Wistron                                 *
